methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:4: error: not found: value getColeurSol
    if (getColeurSol==Color.green){
        ^SlugTracking:5: error: not found: value poseBrosse
    poseBrosse()
    ^SlugTracking:3: error: type mismatch;
 found   : Unit
 required: Boolean
  while (estSurBiscuit()==false){
  ^